# monorepo-abyss

./: .clineignore  .cursorignore  .cursorindexingignore  .dockerignore  .env.example  .gitignore  .gitmodules  .mcp.json  .prettierignore  .prettierrc  .qoderignore  .roomodes  ABYSS_CURRENT_STATUS_REPORT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  ONBOARDING.md  ORCHESTRATOR.md  README-QODER-SETUP.md  README.md  SECURITY.md  SENTRA_CURRENT_STATE.md  check-docs.ts  eslint.config.mjs  mcp.json.example  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  setup-sentra-notion.js  tsconfig.json  tsdoc.json  turbo.json
.agent/: ARCHITECTURE.md  CONTEXT.md  README.md  (+11 more)
apps/community/claudsy-memory/: .gitignore  AUDIT_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_CONTEXT.md  README.md  SECURITY.md  next.config.ts  package.json  pyproject.toml  test_claudesy_engine.py  verify-dashboard-buttons.mjs
apps/community/claudsy-memory/.github/: PULL_REQUEST_TEMPLATE.md
apps/community/claudsy-memory/.taskmaster/: config.json  state.json
apps/community/claudsy-memory/claudesy_memory/: __init__.py  boot.py  cli.py  config.py  consolidator.py  engine.py  extractor.py  models.py  scheduler.py  session_logger.py  storage.py
apps/community/claudsy-memory/docs/: AI_GOVERNANCE.md  API.md  APPENDICES.md  DATA_MODEL.md  DEPLOYMENT.md  IMPLEMENTATION.md  INTRODUCTION.md  MAINTENANCE.md  PRIVACY.md  README.md  REQUIREMENTS.md  SETUP.md  SYSTEM_DESIGN.md  TESTING.md  TROUBLESHOOTING.md  USER_MANUAL.md  WEB_DEVELOPMENT_GUIDE.md
(+2113 files in other folders)
