# Architected and built by Claudesy.
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claudesy-memory"
version = "1.1.0"
description = "Local memory extraction, consolidation, and dashboard tooling for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Claudesy" }
]
dependencies = [
  "pydantic>=2,<3"
]

[project.optional-dependencies]
crypto = ["cryptography>=42,<46"]
tokenizer = ["tiktoken>=0.9,<1"]
dev = [
  "cryptography>=42,<46",
  "tiktoken>=0.9,<1"
]

[project.scripts]
claudesy-memory = "claudesy_memory.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["claudesy_memory*"]
